--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="skills__container bd-grid">          
                 <div>
                     <h2 class="skills__subtitle">Profesional Skills</h2>
-                    <p class="skills__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit optio id vero amet, alias architecto consectetur error eum eaque sit.</p>
+                    <p class="skills__text">I've got experience in using HTML/CSS and Wordpress CMS. Now I'm on my way to get more experienced in using JavaScript in my projects</p>
 
                     <div class="skills__data">
 
