--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="skills__container bd-grid">          
                 <div>
                     <h2 class="skills__subtitle">Profesional Skills</h2>
-                    <p class="skills__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit optio id vero amet, alias architecto consectetur error eum eaque sit.</p>
+                    <p class="skills__text">At thet point of time, I'm already aware how to use HTML/CSS nad JavaScript building website. I really craving to figure out how to use React.js, and I'll definitely will do it. By the way, I have got some basic knowledge in using Java.</p>
 
                     <div class="skills__data">
 
